# CoinPurseTwo

./: .dockerignore  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
api/: Dockerfile  __init__.py  uwsgi.ini
api/models/: base_model.py  character.py  player.py
api/routes/: characters.py  home.py  players.py
docs/: DevJournal.md  EntityDiagram.md  adding_bootstrap.md  dev_setup.md
migrations/: env.py
migrations/versions/: 7abd97a048da_initial_migration.py
nginx/: Dockerfile
tests/: test_characters.py  test_home.py  test_players.py
web/: Dockerfile  __init__.py
web/models/: base_model.py
web/templates/: home.html
web/templates/shared/: base.html
