[tool.poetry]
name = "coinpursetwo"
version = "0.1.0"
description = "A refresh of my Coin Purse Pathfiner Wallet project catching up to what I have learned."
authors = ["Evan Young <cantis@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
black = "^23.1.0"
pytest = "^7.2.2"
flask = "^2.2.3"
sqlalchemy = "^2.0.5.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
