[tool.poetry]
name = "coinpursetwo"
version = "0.1.0"
description = "A refresh of my Coin Purse Pathfiner Wallet project catching up to what I have learned."
authors = ["Evan Young <cantis@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
black = "^23.1.0"
pytest = "^7.2.2"
flask = "^2.2.3"
sqlalchemy = "^2.0.5.post1"
flask-sqlalchemy = "^3.0.3"
toml = "^0.10.2"
ruff = "^0.0.263"
flask-migrate = "^4.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
line-length = 120

[tool.ruff.flake8-quotes]
docstring-quotes = "single"
